# git-task

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
include/: tests.h
